--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <p class="p2"><span class="s1">This is a paragraph.</span></p>
 <p class="p2"><span class="s1">This is V1.0.0.</span></p>
 <p class="p2"><span class="s1">This is V2.0.0.</span></p>
+<p class="p2"><span class="s1">This is V3.0.0.</span></p>
 </body>
 </html>
