--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <style type="text/css">
     p.p2 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
+    span.s2 {font: 12.0px 'Songti SC'; font-kerning: none}
   </style>
 </head>
 <body>
@@ -17,6 +18,6 @@
 <p class="p2"><span class="s1">This is V1.0.0.</span></p>
 <p class="p2"><span class="s1">This is V2.0.0.</span></p>
 <p class="p2"><span class="s1">This is V3.0.0.</span></p>
-<p class="p2"><span class="s1">Dev分支：商城50%</span></p>
+<p class="p2"><span class="s1">Dev</span><span class="s2">分支：商城</span><span class="s1">100%</span></p>
 </body>
 </html>
