商场功能开发完毕

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p class="p2"><span class="s1">This is V1.0.0.</span></p>
 <p class="p2"><span class="s1">This is V2.0.0.</span></p>
 <p class="p2"><span class="s1">This is V3.0.0.</span></p>
+<p class="p2"><span class="s1">Dev</span><span class="s2">分支：商城</span><span class="s1">50%</span></p>
 <p class="p2"><span class="s1">Dev</span><span class="s2">分支：商城</span><span class="s1">100%</span></p>
 </body>
 </html>
